--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html>
-<head>
-    
-    <title>Test</title>
-    
+    <head>
+        <title>Test</title>
     </head>
 
-    <body><h1>Hello World</h1></body>
+    <body>
+        <h1>Hello World</h1>
+    </body>
 </html>
