--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Test</title>
+        <title>theactualdaniel</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 
     <body>
-        <h1>Hello World</h1>
+        <header>
+            <h1>theactualdaniel.github.io</h1>
+        </header>
+        <p>
+            Welcome to the my github page, this is where my projects are hosted.
+        </p>
     </body>
 </html>
